--- a/PRO.html
+++ b/PRO.html
@@ -46,7 +46,7 @@
             <span>Shop By Collections</span>
             <p>Whatever the occasion, we've got a beautiful piece of jewellery for you.<br><b>Your Dream Jewelry is Just a Click Away.</b></p>
            </div>
-           <a href="file:///C:/Users/Shruti/OneDrive/Desktop/PRO/pro.html#category" class="btn">SHOP NOW</a>
+           <a href="pro.html#category" class="btn">SHOP NOW</a>
 
       </section>
       <!-------home section ends here--------->
@@ -63,43 +63,43 @@
                <div class="category-container">
                      
                      <!-----box----->
-                     <a href="file:///C:/Users/Shruti/OneDrive/Desktop/PRO/rings.html" class="category-box">
-                         <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\ring1.jpg" alt="Rings">
+                     <a href="rings.html" class="category-box">
+                         <img src="images2/ring1.jpg" alt="Rings">
                          <span>Rings</span>
                      </a>
 
-                     <a href="file:///C:/Users/Shruti/OneDrive/Desktop/PRO/necklace.html" class="category-box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\necklace1.jpg" alt="Necklace">
+                     <a href="necklace.html" class="category-box">
+                        <img src="images2/necklace1.jpg" alt="Necklace">
                         <span>Necklace</span>
                     </a>
 
                     <a href="#" class="category-box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\anklet1.jpg" alt="Anklets">
+                        <img src="images2/anklet1.jpg" alt="Anklets">
                         <span>Anklets</span>
                     </a>
 
-                    <a href="file:///C:/Users/Shruti/OneDrive/Desktop/PRO/bracelet.html" class="category-box">
+                    <a href="bracelet.html" class="category-box">
                         <img src="images2/bracelet1.jpg" alt="Bracelets">
                         <span>Bracelets</span>
                     </a>
 
-                    <a href="file:///C:/Users/Shruti/OneDrive/Desktop/PRO/earrings.html" class="category-box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\earrings1.jpg" alt="Earrings">
+                    <a href="earrings.html" class="category-box">
+                        <img src="images2/earrings1.jpg" alt="Earrings">
                         <span>Earrings</span>
                     </a>
 
                     <a href="#" class="category-box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\bangle1.jpg" alt="Bangles">
+                        <img src="images2/bangle1.jpg" alt="Bangles">
                         <span>Bangles</span>
                     </a>
 
                     <a href="#" class="category-box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\pendant1.jpg" alt="Pendants">
+                        <img src="images2/pendant1.jpg" alt="Pendants">
                         <span>Pendants</span>
                     </a>
 
                     <a href="#" class="category-box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\chain1.jpg" alt="Chains">
+                        <img src="images2/chain1.jpg" alt="Chains">
                         <span>Chains</span>
                     </a>
                </div>
@@ -329,28 +329,28 @@
         <section class="icons-container">
 
             <div class="icons">
-                <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\icon1.jpg" alt="">
+                <img src="images2/icon1.jpg" alt="">
                 <div class="info">
                      <h3>free delivery</h3>
                      <span>on all orders</span>
                 </div>
             </div>
             <div class="icons">
-                <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\icon2.png" alt="">
+                <img src="images2/icon2.png" alt="">
                 <div class="info">
                      <h3>10 days return policy</h3>
                      <span>Moneyback Guarentee</span>
                 </div>
             </div>
             <div class="icons">
-                <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\icon3.png" alt="">
+                <img src="images2/icon3.png" alt="">
                 <div class="info">
                      <h3>offer and gifts</h3>
                      <span>on all orders</span>
                 </div>
             </div>
             <div class="icons">
-                <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\icon4.png" alt="">
+                <img src="images2/icon4.png" alt="">
                 <div class="info">
                      <h3>secure payments</h3>
                      <span>protected by paypal</span>
