--- a/bracelet.html
+++ b/bracelet.html
@@ -103,7 +103,7 @@
     </div>
     <div class="products-container">
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\braceletp8.jpeg" alt="Product 1" class="product-image">
+            <img src="images2/braceletp8.jpeg" alt="Product 1" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Golden Bracelet</h2>
                 <p class="product-description">This is a Gold Bracelet. It's amazing and worth buying.</p>
@@ -112,7 +112,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\braceletp7.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/braceletp7.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Pearl Bracelet</h2>
                 <p class="product-description">This is a Golden bracelet with Pearls on it. It's amazing and worth buying.</p>
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\braceletp6.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/braceletp6.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Bracelet</h2>
                 <p class="product-description">It's amazing and worth buying.</p>
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\braceletp5.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/braceletp5.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Silver Stone Bracelet</h2>
                 <p class="product-description">An elegant bracelet Embedded with Silver Stones. It's amazing and worth buying.</p>
@@ -139,7 +139,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\braceletp4.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/braceletp4.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Stone Bracelet</h2>
                 <p class="product-description">This is a Silver bracelet with Blue stones. It's amazing and worth buying.</p>
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\braceletp3.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/braceletp3.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Golden Bracelet</h2>
                 <p class="product-description"> It's amazing and worth buying.</p>
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\braceletp2.jgp.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/braceletp2.jgp.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Golden Bracelet</h2>
                 <p class="product-description">A elegant Golden Bracelet to go with every look. It's amazing and worth buying.</p>
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src= "C:\Users\Shruti\OneDrive\Desktop\PRO\images2\braceletp1.jgp.jpeg" alt="Product 3" class="product-image">
+            <img src= "images2/braceletp1.jgp.jpeg" alt="Product 3" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Golden Bracelet</h2>
                 <p class="product-description">It's amazing and worth buying.</p>
