--- a/earrings.html
+++ b/earrings.html
@@ -103,7 +103,7 @@
     </div>
     <div class="products-container">
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\earringsp1.jpg" alt="Product 1" class="product-image">
+            <img src="images2/earringsp1.jpg" alt="Product 1" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Silver Stone Earrings</h2>
                 <p class="product-description">These earrings are embedded with Pink And Silver stones . It's amazing and worth buying.</p>
@@ -112,7 +112,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\earringsp2.jpg" alt="Product 2" class="product-image">
+            <img src="images2/earringsp2.jpg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Golden Rings</h2>
                 <p class="product-description">These are gorgeous golden earrings. It's amazing and worth buying.</p>
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\earringsp3.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/earringsp3.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Diamond Tops</h2>
                 <p class="product-description">These are flower top. It's amazing and worth buying.</p>
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\earringsp4.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/earringsp4.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Tops Earrings</h2>
                 <p class="product-description"> It's amazing and worth buying.</p>
@@ -139,7 +139,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\earringsp5.jpg" alt="Product 2" class="product-image">
+            <img src="images2/earringsp5.jpg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Earrings</h2>
                 <p class="product-description">These are earrings with Silver stone embedded and gold border. It's amazing and worth buying.</p>
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\earringsp6.jpg" alt="Product 2" class="product-image">
+            <img src="images2/earringsp6.jpg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Pearl earrings</h2>
                 <p class="product-description">These are pearl earrings  with silvr body. It's amazing and worth buying.</p>
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\earringsp7.jpg" alt="Product 2" class="product-image">
+            <img src="images2/earringsp7.jpg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Top Earrings</h2>
                 <p class="product-description">These are tops with Gold body and Silver stones embedded. It's amazing and worth buying.</p>
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\earringsp8.jpg" alt="Product 3" class="product-image">
+            <img src="images2/earringsp8.jpg" alt="Product 3" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Pearl tops</h2>
                 <p class="product-description">This is Pearl top with Silver stones. It's amazing and worth buying.</p>
