--- a/like.html
+++ b/like.html
@@ -95,7 +95,7 @@
             <div class="project">
                 <div class="shop">
                     <div class="box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\img7.jpg" alt="img not found">
+                        <img src="images2/img7.jpg" alt="img not found">
                         <div class="content">
                             <h3>Gold Bracelet</h3>
                             <h4>Price: ₹4000 </h4>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\img2.jpg" alt="img not found">
+                        <img src="images2/img2.jpg" alt="img not found">
                         <div class="content">
                             <h3>Diamond Necklace set</h3>
                             <h4>Price: ₹5000 </h4>
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\img3.jpg" alt="img not found">
+                        <img src="images2/img3.jpg" alt="img not found">
                         <div class="content">
                             <h3>Rose Gold Earrings</h3>
                             <h4>Price: ₹1000 </h4>
