--- a/necklace.html
+++ b/necklace.html
@@ -103,7 +103,7 @@
     </div>
     <div class="products-container">
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\necklacep1.jpeg" alt="Product 1" class="product-image">
+            <img src="images2/necklacep1.jpeg" alt="Product 1" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Necklace</h2>
                 <p class="product-description">A beautiful gold plated necklace with diamonds on it. It's amazing and worth buying.</p>
@@ -112,7 +112,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\necklacep2.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/necklacep2.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">s
                 <h2 class="product-title">Choker</h2>
                 <p class="product-description">A elegant Silver Stone Choker which will go with all looks. </p>
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\necklacep3.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/necklacep3.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Necklace</h2>
                 <p class="product-description">A beautiful silver necklace with a stunning red stone pendant. Don't miss it</p>
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\necklacep4.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/necklacep4.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Diamond Stone Necklace Set</h2>
                 <p class="product-description">A beautiful necklace for party or for traditionals. It's amazing and worth buying.</p>
@@ -139,7 +139,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\necklacep5.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/necklacep5.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Silver Stone Necklace</h2>
                 <p class="product-description">A Silver Stone Necklace. Perfect for you </p>
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\necklacep6.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/necklacep6.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Stone Necklace</h2>
                 <p class="product-description">A beautiful piece of necklace. It is worth buying</p>
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\necklacep7.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/necklacep7.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Gold plated Choker</h2>
                 <p class="product-description">A stunning piece of choker with a butterfly pendant. It's amazing and worth buying.</p>
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\necklacep8.jpeg" alt="Product 3" class="product-image">
+            <img src="images2/necklacep8.jpeg" alt="Product 3" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Silver Necklace and earrings</h2>
                 <p class="product-description">An elegent Silver necklace set. It will compliment your beauty.</p>
