--- a/rings.html
+++ b/rings.html
@@ -103,7 +103,7 @@
     </div>
     <div class="products-container">
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\ringp8.jpeg" alt="Product 1" class="product-image">
+            <img src="images2/ringp8.jpeg" alt="Product 1" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Gold ring</h2>
                 <p class="product-description">This is an elegant ring with evil eye for your wellness. It's worth buying.</p>
@@ -112,7 +112,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\ringp1.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/ringp1.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Silver couple rings</h2>
                 <p class="product-description">This is a Silver stone couple rings for you and your loved one.</p>
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\ringp2.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/ringp2.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Gold ring</h2>
                 <p class="product-description">An elegant ring to match with all your outfits. It's amazing and worth buying.</p>
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\ringp3.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/ringp3.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Silver Stone ring</h2>
                 <p class="product-description">A silver stone ring to make you feel like a princess. It's amazing and worth buying.</p>
@@ -139,7 +139,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\ringp4.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/ringp4.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Silver ring</h2>
                 <p class="product-description">This is a beautiful Silver Ring. It's amazing and worth buying.</p>
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\ringp5.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/ringp5.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Gold ring</h2>
                 <p class="product-description">Elegant Golden ring with silver stones embedded on it. It's amazing and worth buying.</p>
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\ringp6.jpeg" alt="Product 2" class="product-image">
+            <img src="images2/ringp6.jpeg" alt="Product 2" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Golden ring</h2>
                 <p class="product-description">Elegant Golden ring with silver stones embedded on it. It's amazing and worth buying.</p>
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\ringp7.jpeg" alt="Product 3" class="product-image">
+            <img src="images2/ringp7.jpeg" alt="Product 3" class="product-image">
             <div class="product-info">
                 <h2 class="product-title">Golden Couple Rings</h2>
                 <p class="product-description">These are Couple Rings with heart engraved on it. It's amazing and worth buying.</p>
