--- a/cartj.html
+++ b/cartj.html
@@ -128,7 +128,7 @@
             <div class="project">
                 <div class="shop">
                     <div class="box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\cart1.jpg" alt="img not found">
+                        <img src="images2/cart1.jpg" alt="img not found">
                         <div class="content">
                             <h3>Gold Bracelet</h3>
                             <h4>Price: ₹4000 </h4>
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\cart2.jpg" alt="img not found">
+                        <img src="images2/cart2.jpg" alt="img not found">
                         <div class="content">
                             <h3>Diamond Necklace set</h3>
                             <h4>Price: ₹5000 </h4>
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="C:\Users\Shruti\OneDrive\Desktop\PRO\images2\cart3.jpg" alt="img not found">
+                        <img src="images2/cart3.jpg" alt="img not found">
                         <div class="content">
                             <h3>Rose Gold Earrings</h3>
                             <h4>Price: ₹1000 </h4>
